--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">StopWatch</string>
+    <string name="title">StopWatch</string>
+    <string name="reset">Reset</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="init_stop_watch_value">00:00:00</string>
+    <string name="resume">Resume</string>
 </resources>
