--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="pause">Pause</string>
     <string name="init_stop_watch_value">00:00:00</string>
     <string name="resume">Resume</string>
+    <string name="dateAtText">stopped at <b>%s</b></string>
 </resources>
